<resources>
    <string name="app_name">Mobtape</string>

    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>

    <string name="tipo_de_servico">Tipo de serviço</string>
    <string name="celular">Celular</string>
    <string name="cpf">CPF</string>
    <string name="cliente">Cliente</string>
    <string name="cadastrar_servico">Cadastrar serviço</string>
    <string name="categoria">Categoria</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="atualizar">ATUALIZAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="atualiza_registro">Atualiza registro</string>
    <string name="preencha_os_campos">Preencha os campos</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="bem_vindo_de_volta">Bem-vindo de volta</string>
    <string name="faca_login_para_comecar">Faça login para começar</string>
    <string name="entrar">Entrar</string>
    <string name="ainda_nao_tem_cadastro">Ainda não tem cadastro?</string>
    <string name="cadastre_se">Cadastre-se.</string>
    <string name="zero">0</string>
    <string name="preenchiment_nome_invalido">Preenchimento do nome inválido</string>
    <string name="preenchiment_sobrenome_invalido">Preenchimento do sobrenome inválido</string>
    <string name="preenchiment_email_invalido">Preenchimento do e-mail inválido</string>
    <string name="preenchiment_senha_invalido">Preenchimento da senha inválida</string>
    <string name="senha_deve_conter">A senha deve ter entre 4 a 12 caracteres</string>
    <string name="senha_nao_conferem">Senhas não conferem</string>
    <string name="preenchimento_telefone_invalido">Preenchimento do Telefone inválido</string>
    <string name="preenchimento_cpf_invalido">Preenchimento do CPF Inválido</string>
    <string name="preenchimento_cliente_invalido">Preenchimento do cliente inválido</string>
    <string name="registro_atualizado">Registro atualizado</string>
    <string name="campos_preenchidos">Os campos não foram preenchidos</string>
    <string name="sim">Sim</string>
    <string name="registro_excluido">Registro excluído com sucesso</string>
    <string name="nao">Não</string>
    <string name="cadastro">Cadastro</string>
    <string name="exibir_senha">Exibir senha</string>
    <string name="atualizar_servico">Atualizar serviço</string>
    <string name="bem_vindo">Bem-vindo</string>
    <string name="prazer_em_ver_voce_de_novo">Prazer em ver você de novo!</string>
    <string name="login">Login</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="deseja_excluir_o_servico">Tem certeza de que deseja excluir o serviço?</string>
    <string name="sair_sem_salvar">Sair sem salvar</string>
    <string name="deseja_sair_sem_salvar">Deseja sair sem salvar os dados alterados?</string>
    <string name="dados_nao_alterados">Os dados não foram alterados</string>
    <string name="excluir_registro">Excluir registro</string>
    <string name="confeccao">Confecção</string>
    <string name="almofada">Almofada</string>

    <string-array name="category">
        <item>Almofada</item>
        <item>Alvenaria</item>
        <item>Cabeceira</item>
        <item>Cadeira</item>
        <item>Canto Alemão</item>
        <item>Poltrona</item>
        <item>Sofá</item>
    </string-array>
    <string-array name="type">
        <item>Confecção</item>
        <item>Reforma</item>
    </string-array>
</resources>